[tool.poetry]
name = "mlflow-example"
version = "0.1.0"
description = ""
authors = ["Juri Wiens"]
readme = "README.md"
packages = [{include = "mlflow_example"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow = "^2.8.0"
numpy = "^1.22.3"
pandas = "^1.4.1"
mlflow = "^1.24.0"


[tool.poetry.group.dev.dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
